[package]
name = "binance_orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance_spot_connector_rust = { version = "1.1.0", features = ["full"] }
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
env_logger = "0.11.3"
